@startuml Ebene3.png
hide empty members

package domain {

    class DRDElement {
        -title : String
        -deliveryDate : String
        -requirements : Collection<String>
        -number : String
        -action : String
    }

    abstract class CatalogueElement {
        reference : String
        logo : String
        position : String
        chapter : String
        text : String
        level : int
    }
    CatalogueElement --> "0..*" DRDElement : drds

    class BaseCatalogueElement {
        identifiers : Collection<String>
        phases : Collection<String>
        added : boolean
        changed : boolean
   
    }
    CatalogueElement <|-- BaseCatalogueElement

    class TailoringCatalogueElement {
        applicable : boolean
    }
    CatalogueElement <|-- TailoringCatalogueElement

    class CatalogueElementQuery {
        +byChapter(elements : Collection<CatalogElement>, chapter : String) : Collection<CatalogElement> 
    }
}
@enduml
